test(android): replace bytecode mocks with fakes